--- a/backend/data/projects.json
+++ b/backend/data/projects.json
@@ -44,5 +44,21 @@
     "imageUrl": "",
     "isHighlighted": false,
     "order": 1
+  },
+  {
+    "id": "51396bf3-75d4-4dbb-88e5-1a666fdf0147",
+    "title": "La Signature",
+    "shortDescription": "site web de test pour le restaurant la Signature",
+    "fullDescription": "",
+    "technologies": [
+      "html",
+      "css",
+      "javascript"
+    ],
+    "liveUrl": "https://mathisd-t.github.io/signature/",
+    "githubUrl": "",
+    "imageUrl": "",
+    "isHighlighted": false,
+    "order": 1
   }
 ]
