--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,9 @@ jobs:
 
       - name: Build
         run: npm run build
+        env:
+          # Force la base pour GitHub Pages (repo: Portfolio) afin que les assets soient resolus correctement.
+          VITE_BASE: /Portfolio/
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
